A GyorsitoSporaTeszt, BenitoSporaTeszt és CsorbitoSporaTeszt elkészült.